--- a/dvdmovie/templates/person/detail.html
+++ b/dvdmovie/templates/person/detail.html
@@ -1,5 +1,9 @@
 {% extends "movies/base.html" %}
 
+{% block title %}
+    <title>MVCTLG {{ person }}</title>
+{% endblock title %}
+
 {% block header %}
     {% include "movies/header.html" %}
 {% endblock header %}
