--- a/dvdmovie/templates/movies/moviestarform.html
+++ b/dvdmovie/templates/movies/moviestarform.html
@@ -1,4 +1,7 @@
 {% extends "movies/base.html" %}
+{% block title %}
+    <title>MVCTLG {{movie}}: Adding Star</title>
+{% endblock title %}
 {% block header %}
 {% include "movies/header.html" %}
 {% endblock header %}
