--- a/dvdmovie/templates/person/editform.html
+++ b/dvdmovie/templates/person/editform.html
@@ -1,5 +1,10 @@
 {% extends "movies/base.html" %}
 {% load widget_tweaks %}
+
+{% block title %}
+    <title>MVCTLG Editing: {{ person }}</title>
+{% endblock title %}
+
 {% block header %}
     {% include "movies/header.html" %}
 {% endblock header %}
