--- a/dvdmovie/templates/person/search.html
+++ b/dvdmovie/templates/person/search.html
@@ -1,5 +1,7 @@
-
 {% extends "movies/base.html" %}
+{% block title %}
+    <title>MVCTLG Person Search</title>
+{% endblock title %}
 {% block header %}
 {% include "movies/header.html" %}
 {% endblock header %}
